--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ set ( CMAKE_CXX_STANDARD 11 )
 set ( COMMON_ALL 
     src/common/vec3.h
     src/common/ray.h
+    src/common/rtweekend.h
+    src/common/camera.h
 )
 
 set ( SOURCE_ONE_WEEKEND 
